--- a/templates/reco/reco_container.html
+++ b/templates/reco/reco_container.html
@@ -4,7 +4,7 @@
 <!-- 추천 결과 출력 -->
 <div id="reco_result" style="text-align:center;" >
                 <div id="food-details" class="card">
-                    <div class="card-body nanum-context" style="margin:auto;">
+                    <div class="card-body gowundodum-title" style="margin:auto;">
                         <div id="map" style="width:700px;height:400px; margin:auto; margin-top:10px; margin-bottom:20px"></div>
                         <h4> {{ food_type }} </h4>
                         <h4> {{ food_price }} </h4>
