--- a/templates/reco/reco_container.html
+++ b/templates/reco/reco_container.html
@@ -3,9 +3,9 @@
 
 <!-- 추천 결과 출력 -->
 <div id="reco_result" style="text-align:center;" >
-                <div id="food-details" class="card">
+                <div id="food-details">
                     <div class="card-body gowundodum-title" style="margin:auto;">
-                        <div id="map" style="width:700px;height:400px; margin:auto; margin-top:10px; margin-bottom:20px"></div>
+                        <div id="map" class="border border-warning border-style:solid 1px;" style="width:700px;height:400px; margin:auto; margin-top:10px; margin-bottom:20px"></div>
                         <h4> {{ food_type }} </h4>
                         <h4> {{ food_price }} </h4>
                         <h1><b>{{ food_name }}</b></h1>
