--- a/templates/pybo/records_form.html
+++ b/templates/pybo/records_form.html
@@ -22,13 +22,13 @@
             </div>
             <div class="form-group row nanum-context align-items-center">
                 <label for="food_nameInput" class="col-sm-1.5 col-form-label" style="margin-left:15px;">음식 메뉴 :</label>
-                <div class="col-sm-10">
+                <div class="col-sm-2">
                     <input type="text" id="food_nameInput" name="food_name" class="form-control" value="{{ request.GET.food_name }}" style="width:100%;">
                 </div>
             </div>
 
             <div class="form-group row nanum-context">
-                <label for="{{ form.subject.id_for_label }}" class="col-sm-1.5 col-form-label" style="margin-left:15px;">제목 :</label>
+                <label for="{{ form.subject.id_for_label }}" class="col-sm-1.5 col-form-label" style="margin-left:15px;">제 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;목 :</label>
                 <div class="col-sm-11">
                 {{ form.subject }}
                 </div>
