--- a/templates/reco/reco_header.html
+++ b/templates/reco/reco_header.html
@@ -14,6 +14,7 @@
 
 </head>
 <body>
+<div class="p-3 mb-2 bg-body text-dark"></div>
 <div style="text-align:center; height:100px; margin-bottom:20px;">
     <span class="lobster-title" style="color:firebrick;">C</span>
     <span class="lobster-title">hoose Your</span>
