회원정보 및 수정, 가입하기 이름 추가

--- a/templates/pybo/records_list.html
+++ b/templates/pybo/records_list.html
@@ -60,7 +60,7 @@
                             {% endfor %}
                         </div>
                     </td>
-                    <td>{{ records.author.nickname }}</td>
+                    <td>{{ records.author.myname }}</td>
                     <td>{{ records.modify_date|default:records.create_date|date:"Y-m-d H:i" }}</td>
                     <td>{{ records.views }}</td>
                 </tr>
