--- a/templates/common/profile_update.html
+++ b/templates/common/profile_update.html
@@ -6,14 +6,9 @@
         <form method="post" class="post-form">
             {% csrf_token %}
             <div class="form-group">
-                <label for="id_first_name">성</label>
-                <input type="text" class="form-control" name="first_name" id="id_first_name"
-                    value="{{ user.first_name|default_if_none:'' }}">
-            </div>
-            <div class="form-group">
-                <label for="id_last_name">이름</label>
-                <input type="text" class="form-control" name="last_name" id="id_last_name"
-                    value="{{ user.last_name|default_if_none:'' }}">
+                <label for="username">아이디</label>
+                <input type="text" class="form-control" name="username" id="username"
+                    value="{{ user.username|default_if_none:'' }}">
             </div>
             <div class="form-group">
                 <label for="nickname">닉네임</label>
@@ -21,9 +16,9 @@
                     value="{{ user.nickname|default_if_none:'' }}">
             </div>
             <div class="form-group">
-                <label for="username">아이디</label>
-                <input type="text" class="form-control" name="username" id="username"
-                    value="{{ user.username|default_if_none:'' }}">
+                <label for="id_myname">이름</label>
+                <input type="text" class="form-control" name="myname" id="id_myname"
+                    value="{{ user.myname|default_if_none:'' }}">
             </div>
             <div class="form-group">
                 <label for="phone">전화번호</label>
@@ -40,7 +35,7 @@
                 <input type="text" class="form-control" name="address" id="address"
                     value="{{ user.address|default_if_none:'' }}">
             </div>
-            <button type="submit" class="btn btn-secondary">수정하기</button>
+            <button type="submit" class="btn btn-danger">수정하기</button>
         </form>
 </div>
 
