--- a/templates/common/signup.html
+++ b/templates/common/signup.html
@@ -20,11 +20,6 @@
             {% csrf_token %}
             {% include "form_errors.html" %}
             <div class="form-group">
-                <label for="nickname">닉네임</label>
-                <input type="text" class="form-control" name="nickname" id="nickname"
-                    value="{{ form.nickname.value|default_if_none:'' }}">
-            </div>
-            <div class="form-group">
                 <label for="username">아이디</label>
                 <input type="text" class="form-control" name="username" id="username"
                     value="{{ form.username.value|default_if_none:'' }}">
@@ -38,6 +33,16 @@
                 <label for="password2">비밀번호 확인</label>
                 <input type="password" class="form-control" name="password2" id="password2"
                     value="{{ form.password2.value|default_if_none:'' }}">
+            </div>
+            <div class="form-group">
+                <label for="myname">이름</label>
+                <input type="text" class="form-control" name="myname" id="myname"
+                    value="{{ form.myname.value|default_if_none:'' }}">
+            </div>
+            <div class="form-group">
+                <label for="nickname">닉네임</label>
+                <input type="text" class="form-control" name="nickname" id="nickname"
+                    value="{{ form.nickname.value|default_if_none:'' }}">
             </div>
             <div class="form-group">
                 <label for="phone">전화번호</label>
