--- a/templates/pybo/records_list.html
+++ b/templates/pybo/records_list.html
@@ -76,7 +76,7 @@
     </table>
 
     <!--  페이징 처리  -->
-    <ul class="pagination justify-content-center nanum-context">
+    <ul class="pagination justify-content-center nanum-context pt-5">
         <!--    이전 페이지    -->
         {% if records_list.has_previous %}
         <li class="page-item">
