type에 분식, 패스트푸드 추가

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -33,12 +33,14 @@
             Recommends
           </a>
           <div class="dropdown-menu" aria-labelledby="recommendsDd">
-            <a class="dropdown-item px-2 noto-sans" href="http://localhost:8000/recommend-food/?food_type= ">A&nbsp;&nbsp;&nbsp;l&nbsp;&nbsp;&nbsp;l</a>
-            <a class="dropdown-item px-2 noto-sans" href="http://localhost:8000/recommend-food/?food_type=한식">한&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;식</a>
-            <a class="dropdown-item px-2 noto-sans" href="http://localhost:8000/recommend-food/?food_type=중식">중&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;식</a>
-            <a class="dropdown-item px-2 noto-sans" href="http://localhost:8000/recommend-food/?food_type=일식">일&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;식</a>
-            <a class="dropdown-item px-2 noto-sans" href="http://localhost:8000/recommend-food/?food_type=양식">양&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;식</a>
-            <a class="dropdown-item px-2 noto-sans" href="http://localhost:8000/recommend-food/?food_type=디저트">디 저 트</a>
+            <a class="dropdown-item px-2 noto-sans" href="http://localhost:8000/recommend-food/?food_type= ">A&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;l&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;l</a>
+            <a class="dropdown-item px-2 noto-sans" href="http://localhost:8000/recommend-food/?food_type=한식">한&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;식</a>
+            <a class="dropdown-item px-2 noto-sans" href="http://localhost:8000/recommend-food/?food_type=중식">중&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;식</a>
+            <a class="dropdown-item px-2 noto-sans" href="http://localhost:8000/recommend-food/?food_type=일식">일&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;식</a>
+            <a class="dropdown-item px-2 noto-sans" href="http://localhost:8000/recommend-food/?food_type=양식">양&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;식</a>
+            <a class="dropdown-item px-2 noto-sans" href="http://localhost:8000/recommend-food/?food_type=분식">분&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;식</a>
+            <a class="dropdown-item px-2 noto-sans" href="http://localhost:8000/recommend-food/?food_type=패스트푸드">패스트푸드</a>
+            <a class="dropdown-item px-2 noto-sans" href="http://localhost:8000/recommend-food/?food_type=디저트">디 &nbsp;&nbsp;저&nbsp; &nbsp;트</a>
           </div>
         </li>
 
