--- a/templates/reco/reco_container.html
+++ b/templates/reco/reco_container.html
@@ -25,6 +25,8 @@
                     <option value="중식" {% if food_type == "중식" %}selected{% endif %}>중식</option>
                     <option value="일식" {% if food_type == "일식" %}selected{% endif %}>일식</option>
                     <option value="양식" {% if food_type == "양식" %}selected{% endif %}>양식</option>
+                    <option value="분식" {% if food_type == "분식" %}selected{% endif %}>분식</option>
+                    <option value="패스트푸드" {% if food_type == "패스트푸드" %}selected{% endif %}>패스트푸드</option>
                     <option value="디저트" {% if food_type == "디저트" %}selected{% endif %}>디저트</option>
                       <!-- 추가적인 분류 옵션들 -->
                 </select>
