--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     <link href="./template.css" rel="stylesheet">
     <!-- pybo CSS -->
     <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
-
+<!-- test -->
     <style>
     @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap');
