--- a/templates/common/change_password.html
+++ b/templates/common/change_password.html
@@ -2,6 +2,14 @@
 {% block content %}
 
 <div class="container my-3">
+    {% for message in messages %}
+        <div class="alert {{ message.tags }} alert-auto-dismissible alert-dismissible notification-container text-center" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            {{ message }}
+        </div>
+    {% endfor %}
     <h2 class="text-center mb-4">비밀번호 변경</h2>
     <form method="POST" novalidate>
         {% csrf_token %}
