--- a/templates/common/profile_view.html
+++ b/templates/common/profile_view.html
@@ -2,6 +2,14 @@
 {% block content %}
 
 <div class="container my-3 nanum-context">
+    {% for message in messages %}
+        <div class="alert {{ message.tags }} alert-auto-dismissible alert-dismissible notification-container text-center" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            {{ message }}
+        </div>
+    {% endfor %}
     <div class="p-3 mb-2 bg-body text-dark"></div><h1 class="text-center mb-4"><b>회원정보</b></h1>
     <div class="row">
         <div class="col-sm-12 p-5">
